2003-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* file.c (getNextPage): no need volatile for code

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03683] interrupt in getNextPage()
	* file.c (getNextPage): trap SIGINT

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03682] open null file on tab
	* display.c (displayBuffer): if empty, clear()

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03681] Re: fold patch
	* buffer.c (reshapeBuffer): buf->pos, sbuf.currentLine fix
				FoldLine
	* display.c (arrangeCursor): buf->pos fix
		(restorePosition): buf->pos fix	

2003-01-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: RESHAPE
		rc: fold_line

2003-01-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix compiler warnings
	* display.c (displayBuffer): fix suggest parentheses around && within ||
2003-01-24  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03667] fold patch
	* anchor.c (reAnchorPos): rewrite
		(reAnchorWord): delete reseq_anchor()
		(reAnchorAny): use l->size
				delete reseq_anchor()
	* backend.c (internal_get): pass TRUE to saveBuffer
	* buffer.c (newBuffer): delete n->linelen
		(reshapeBuffer): rewrite
	* display.c (displayBuffer): FoldLine
		(redrawLine): l->bpos
		(cursorUp0): added
		(cursorUp): rewrite
		(cursorDown0): added
		(cursowDown): rewrite
		(cursorRight): check l->next
				l->bwidth
		(cursorLeft): l->prev && l->bpos
				l->bwidth
		(arrangeCursor): buf->currentLine->bwidth
			buf->cursorX
	* etc.c (checkType): **oporp
				rewrite
		(calcPosition): realColumn allocated by New_reuse
	* file.c (addnewline): add nlines arg
		(propBuffer): deleted
		(colorBuffer): deleted
		(readHeader): propBuffer
			FOLD_BUFFER_WIDTH
		(HTMLlineproc2body): rewrite
		(addnewline2): added
		(addnewline): rewrite
		(loadBuffer): propBuffer, colorBuffer
		(saveBuffer): cont arg
		(getNextPage): rewrite
	* fm.h (LINELEN): 256
		(FNLEN): deleted
		(Line): add size, bpos, bwidth