@@ -1,3 +1,10 @@
+2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03684] Re: fold patch
+	* file.c (PSIZE): added
+		(HTMLlineproc2body): outc,outp is created by NewAtom_N
+			use PSIZE
+
 2003-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* file.c (getNextPage): no need volatile for code
